[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsdot"
version = "0.0.0"
authors = [{name = "Jeremiah Paige", email = "ucodery@gmail.com"}]
description = "A Python wrapper of the wsdot.wa.gov APIs"
dependencies = [
    "aiohttp",
    "pydantic",
]

[tool.hatch.envs.check]
dependencies = [
    "ruff",
]
[tool.hatch.envs.check.scripts]
run = "ruff check"
fmt = "ruff format"
[tool.hatch.envs.test]
dependencies = [
    "mypy",
    "pytest",
    "pytest-asyncio",
]
[tool.hatch.envs.test.scripts]
run = "pytest"
type = "mypy ."

[tool.ruff.format]
quote-style = "single"
